# dess-engine

./: .build.yaml  .build.yml  .gitignore  Cargo.toml  README.md  data.dess
assets/effects/: pbr.json
assets/models/ABeautifulGame/: ABeautifulGame.gltf
assets/models/PBR/: ABeautifulGame.gltf  gun.gltf
assets/shaders/: pbr_ps.hlsl  pbr_vs.hlsl  screen_quad_vs.hlsl  sky_ps.hlsl  sky_vs.hlsl  tonemapping_ps.hlsl  unlit_ps.hlsl  unlit_vs.hlsl
assets/shaders/include/: bdrf.hlsl  common.hlsl
bundles/: shaders.json  test.json
cache/shaders/: unlit.vert.spv
crates/asset-pipeline/: Cargo.timl
crates/asset-pipeline/src/: bundle_builder.rs  gltf_import.rs  image_import.rs  lib.rs
crates/assets/: Cargo.toml
crates/assets/src/: assetdb.rs  bundle.rs  gltf_import.rs  gpumesh.rs  gpumodel.rs  image.rs  lib.rs  material.rs  meshdata.rs  model.rs
crates/buffer-allocator/: Cargo.toml
crates/buffer-allocator/src/: allocator.rs  error.rs  lib.rs  memory.rs
crates/common/: Cargo.toml
crates/common/src/: chunky_list.rs  handle.rs  lib.rs  memory.rs  mesh.rs  serialization.rs  time.rs  traits.rs  transform.rs
crates/common/src/bounds/: aabb.rs
crates/common/src/mesh/: builder.rs  cpumesh.rs  cpumodel.rs  effect.rs  material.rs  meshdata.rs  mod.rs  model.rs  staticmesh.rs
crates/content/: Cargo.toml
crates/content/src/: lib.rs  mesh.rs  texture.rs
crates/lib/asset-manager/: Cargo.toml
crates/lib/asset-manager/src/: lib.rs
crates/lib/asset-pipeline/: Cargo.toml
crates/lib/asset-pipeline/src/: bundler.rs  compile_shaders.rs  desc.rs  gltf.rs  gltf_import.rs  image.rs  image_import.rs  import_effect.rs  import_shader.rs  lib.rs  piepline.rs  pipeline.rs  shader.rs
crates/lib/assets/: Cargo.toml
crates/lib/assets/src/: bundle.rs  effect.rs  gpumodel.rs  image.rs  lib.rs  material.rs  model.rs  shader.rs
crates/lib/backend/: Cargo.toml
crates/lib/backend/src/: barrier.rs  buffer.rs  buffer_pool.rs  command_buffer.rs  descriptor_cache.rs  descriptor_storage.rs  descriptors.rs  device.rs  draw_stream.rs  drop_list.rs  error.rs  frame.rs  image.rs  instance.rs  lib.rs  physical_device.rs  pipeline.rs  pipeline_cache.rs  pool.rs  program.rs  render_pass.rs  staging.rs  swapchain.rs  uniforms.rs
crates/lib/backend/src/vulkan/: bind_group.rs  buffer.rs  command_buffer.rs  descriptors.rs  device.rs  drop_list.rs  frame.rs  frame_context.rs  image.rs  instance.rs  mod.rs  physical_device.rs  pipeline.rs  pipeline_cache.rs  program.rs  render_pass.rs  staging.rs  swapchain.rs  temp.rs  temp_images.rs  uniforms.rs
crates/lib/common/: Cargo.toml
crates/lib/common/src/: client.rs  executor.rs  handle.rs  lib.rs  memory.rs  pool.rs  serialization.rs  time.rs  traits.rs  transform.rs
crates/lib/common/src/bounds/: mod.rs
crates/lib/engine/: Cargo.toml
crates/lib/engine/src/: asset_cache.rs  buffer_pool.rs  effect.rs  lib.rs  material.rs  mesh.rs  model.rs  pipeline_cache.rs  pool.rs  resource_manager.rs
crates/lib/engine/src/render/: mod.rs
crates/lib/gfx/: Cargo.toml
crates/lib/gfx/src/: descriptors.rs  draw_stream.rs  lib.rs  renderer.rs  resource_manager.rs  staging.rs  temp.rs  temp_images.rs  uniforms.rs
crates/lib/render/: Cargo.toml
crates/lib/render/src/: descriptors.rs  error.rs  uniforms.rs
crates/lib/render/src/vulkan/: buffer.rs  command_buffer.rs  image.rs  instance.rs  physical_device.rs  program.rs
crates/lib/runner/: Cargo.toml
crates/lib/runner/examples/: clear.rs  demo.rs
crates/lib/runner/src/: lib.rs  runner.rs
crates/lib/vfs/: Cargo.toml
crates/lib/vfs/src/: lib.rs  mmap.rs  packed.rs  raw_fs.rs  vfs.rs
crates/render/: Cargo.toml
crates/render-backend/: Cargo.toml
crates/render-backend/examples/: vk-clear.rs  vk-texture.rs  vk-triangle.rs
crates/render-backend/src/: buffer.rs  command_buffer.rs  device.rs  droplist.rs  error.rs  frame_context.rs  gpuresource.rs  image.rs  instance.rs  lib.rs  memory.rs  physical_device.rs  pipeline.rs  staging.rs  swapchain.rs
crates/render-backend/src/vulkan/: command_buffer.rs  device.rs  frame_context.rs  framebuffer.rs  image.rs  instance.rs  mod.rs  physical_device.rs  render_pass.rs  surface.rs  swapchain.rs
crates/render/examples/: basic.rs  render-texture.rs  render-triangle.rs  vk-clear.rs  vk-texture.rs  vk-triangle.rs
crates/render/src/: descriptors.rs  droplist.rs  error.rs  geometry.rs  lib.rs  megabuffer.rs  memory.rs  render.rs  ringbuffer.rs  staging.rs  uniforms.rs
crates/render/src/vulkan/: buffer.rs  command_buffer.rs  device.rs  droplist.rs  error.rs  frame_context.rs  geometry_cache.rs  image.rs  image_cache.rs  instance.rs  memory.rs  mod.rs  physical_device.rs  pipeline.rs  program.rs  render_pass.rs  ringbuffer.rs  shader.rs  staging.rs  surface.rs  swapchain.rs
crates/resources/: Cargo.toml
crates/resources-builder/: Cargo.toml
crates/resources-builder/src/: builder.rs  lib.rs
crates/resources-builder/src/content/: mod.rs  text.rs  texture.rs
crates/resources/src/: lib.rs  texture.rs
crates/resources/src/content/: error.rs  mod.rs  texture.rs
crates/runner/: Cargo.toml
crates/runner/src/: lib.rs  mainloop.rs  runner.rs
crates/vfs/: Cargo.toml
crates/vfs/src/: archive.rs  dev_fs.rs  directory.rs  error.rs  lib.rs  mmap.rs  packed.rs  raw_fs.rs  traits.rs  vfs.rs
data/effects/: unlit.json
data/shaders/: simple.frag  simple.vert  unlit.frag.glsl  unlit.frag.spv  unlit.vert.glsl  unlit.vert.spv  unlit_vs.hlsl
tools/packer/: Cargo.toml
tools/packer/src/: main.rs
tools/transformer/: Cargo.toml
tools/transformer/src/: main.rs
