[package]
name = "dess-assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dess-common = { path = "../common" }
log = "0.4.20"
byteorder = "1.4"
four-cc = "0.3.0"
uuid = "1.4.1"
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr"] }
ddsfile = "0.5.1"
gltf = { version = "1.3.0", features = ["KHR_materials_emissive_strength", "KHR_materials_unlit"] }
mikktspace = { version = "0.3.0", features = ["glam"], default-features = false}
glam = "0.24.1"
meshopt = "0.1.9"
shader-prepper = "0.2.0"
intel_tex_2 = "0.2.0"
turbosloth = "0.2.0"
anyhow = "1.0.75"
bytes = "1.5.0"
async-trait = "0.1.74"
ash = "0.37.3"
numquant = "0.2.0"
siphasher = "1.0.0"
normalize-path = "0.2.1"
