[package]
name = "dess-assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dess-common = { path = "../common" }
byteorder = "1.4"
uuid = "1.4.1"
ash = "0.37.3"
siphasher = "1.0.0"
glam = "0.24.1"
