[package]
name = "buffer-allocator"
version = "0.1.0"
edition = "2021"

[dependencies]
gpu-alloc = { git = "https://git.sr.ht/~gigablaster/gpu-alloc" }
gpu-alloc-ash = { git = "https://git.sr.ht/~gigablaster/gpu-alloc" }
ash =  "0.37"
vk-sync = { git = "https://git.sr.ht/~gigablaster/vk-sync-rs" }
puffin = "0.16"
