[package]
name = "render-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash =  "0.37"
sdl2 = "0.35"
common = { path = "../common" }
log = "0.4"
gpu-alloc = "0.5"
gpu-alloc-ash = "0.5"
arrayvec = "0.7"
vk-sync = { git = "https://git.sr.ht/~gigablaster/vk-sync-rs" }

[[example]]
name = "vk-clear"

[dev-dependencies]
simple_logger = "4.0"
