[package]
name = "dess-render-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
ash-window = "0.12"
raw-window-handle = "0.5"
ash =  "0.37"
log = "0.4"
arrayvec = "0.7"
puffin = "0.16"
rspirv = "0.11"
rspirv-reflect = "0.8"
byte-slice-cast = "1.2"
vk-sync = { git = "https://git.sr.ht/~gigablaster/vk-sync-rs" }
glam = "0.24"
gpu-alloc = { git = "https://git.sr.ht/~gigablaster/gpu-alloc" }
gpu-alloc-ash = { git = "https://git.sr.ht/~gigablaster/gpu-alloc" }
gpu-descriptor = { git = "https://git.sr.ht/~gigablaster/gpu-descriptor" }
gpu-descriptor-ash = { git = "https://git.sr.ht/~gigablaster/gpu-descriptor" }
dess-common = { path = "../common" }
