[package]
name = "dess-render"
version = "0.1.0"
edition = "2021"

[dependencies]
dess-render-backend = { path = "../render-backend" }
dess-common = { path = "../common" }
ash =  "0.37"
vk-sync = { git = "https://git.sr.ht/~gigablaster/vk-sync-rs" }
puffin = "0.16"
raw-window-handle = "0.5"
arrayvec = "0.7"
gpu-descriptor = { git = "https://git.sr.ht/~gigablaster/gpu-descriptor" }
gpu-descriptor-ash = { git = "https://git.sr.ht/~gigablaster/gpu-descriptor" }
rayon = "1.7"
log = "0.4"