
[package]
name = "resources-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
resources = { path = "../resources" }
log = "0.4"
four-cc = "0.2"
uuid = "1.3"
image = "0.24"
toml = "0.7"
