[package]
name = "dess-vfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dess-common = { path = "../common" }
log = "0.4"
byteorder = "1.4"
crc = "3.0"
four-cc = "0.2"
memmap2 = "0.5"
lazy_static = "1.4"
