[package]
name = "dess-vfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dess-common = { path = "../common" }
log = "0.4.20"
byteorder = "1.4"
crc = "3.0.1"
four-cc = "0.3.0"
memmap2 = "0.7.1"
lazy_static = "1.4.0"
lz4_flex = "0.11.1"
directories = "5.0.1"