
[package]
name = "transformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dess-common = { path = "../../crates/common" }
dess-content = { path = "../../crates/content" }
log = "0.4"
simple_logger = "4.1"
glob = "0.3"
clap = "4.2"
rayon = "1.8.0"
