[package]
name = "dess-asset-pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dess-common = { path = "../common" }
dess-assets = { path = "../assets" }
log = "0.4.20"
byteorder = "1.5.0"
uuid = "1.5.0"
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr"] }
ddsfile = "0.5.2"
gltf = { version = "1.3.0", features = ["KHR_materials_emissive_strength", "KHR_materials_unlit"] }
mikktspace = { version = "0.3.0", features = ["glam"], default-features = false}
glam = "0.24.2"
meshopt = "0.1.9"
shader-prepper = "0.2.0"
intel_tex_2 = "0.2.0"
bytes = "1.5.0"
ash = "0.37.3"
numquant = "0.2.0"
siphasher = "1.0.0"
normalize-path = "0.2.1"
parking_lot = "0.12.1"
rayon = "1.8.0"
failure = "0.1.8"
hassle-rs = "0.11.0"
spirv-tools = "0.9.0"
byte-slice-cast = "1.2.2"
serde = { version = "1.0.192", features = ["derive"]}
lz4_flex = "0.11.1"