[package]
name = "dess-asset-pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dess-common = { path = "../common" }
dess-backend = { path = "../backend" }
dess-assets = { path = "../assets" }
uuid = "1.5.0"
ash = "0.37.3"
bytes = "1.5.0"
speedy = { version = "0.8.6", features = ["speedy-derive", "uuid"] }
normalize-path = "0.2.1"
numquant = "0.2.0"
bevy_tasks = { version = "0.12.1", features = ["multi-threaded"] }
siphasher = "1.0.0"

image = { version = "0.24.7", default-features = false, features = [
    "jpeg",
    "png",
    "pnm",
    "tga",
    "tiff",
    "webp",
    "bmp",
    "hdr",
] }
ddsfile = "0.5.2"
intel_tex_2 = "0.2.0"
gltf = { version = "1.3.0", features = [
    "KHR_materials_emissive_strength",
    "KHR_materials_unlit",
] }
mikktspace = { version = "0.3.0", features = [
    "glam",
], default-features = false }
glam = "0.24.2"
meshopt = "0.1.9"
hassle-rs = "0.11.0"
shader-prepper = "0.2.0"
failure = "0.1.8"
