[package]
name = "dess-assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dess-common = { path = "../common" }
byteorder = "1.5.0"
uuid = "1.5.0"
ash = "0.37.3"
siphasher = "1.0.0"
glam = "0.24.2"
bytes = "1.5.0"
memmap2 = "0.9.0"
four-cc = "0.3.0"
lz4_flex = "0.11.1"
serde = { version = "1.0.192", features = ["derive"] }