[package]
name = "dess-assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dess-common = { path = "../common" }
dess-backend = { path = "../backend" }
ash = "0.37.3"
uuid = "1.5.0"
bytes = "1.5.0"
speedy = { version = "0.8.6", features = ["speedy-derive", "uuid"] }
normalize-path = "0.2.1"
numquant = "0.2.0"
siphasher = "1.0.0"
downcast-rs = "1.2.0"
