[package]
name = "dess-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dess-common = { path = "../common" }
ash =  "0.37.3"
vk-sync = { git = "https://git.sr.ht/~gigablaster/vk-sync-rs" }
puffin = "0.17.0"
ash-window = "0.12.0"
raw-window-handle = "0.5.2"
arrayvec = "0.7.4"
rayon = "1.8.0"
log = "0.4.20"
gpu-alloc = "0.6.0"
gpu-alloc-ash = "0.6.0"
gpu-descriptor = "0.2.4"
gpu-descriptor-ash = "0.2.0"
rspirv-reflect = "0.8.0"
byte-slice-cast = "1.2.2"
parking_lot = "0.12.1"
sorted-vec = "0.8.3"