[package]
name = "dess-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dess-common = { path = "../common" }
ash = "0.37.3"
puffin = "0.17.0"
ash-window = "0.12.0"
raw-window-handle = "0.5.2"
arrayvec = "0.7.4"
log = "0.4.20"
gpu-alloc = "0.6.0"
gpu-alloc-ash = "0.6.0"
gpu-descriptor = "0.2.4"
gpu-descriptor-ash = "0.2.0"
rspirv-reflect = "0.8.0"
byte-slice-cast = "1.2.2"
directories = "5.0.1"
uuid = "1.4.1"
siphasher = "1.0.0"
parking_lot = "0.12.1"
speedy = { version = "0.8.6", features = ["speedy-derive", "uuid"] }
