[package]
name = "dess-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dess-common = { path = "../common" }
ash = "0.37.3"
puffin = "0.18.1"
ash-window = "0.12.0"
raw-window-handle = "0.5.2"
arrayvec = "0.7.4"
log = "0.4.20"
gpu-alloc = "0.6.0"
gpu-alloc-ash = "0.6.0"
byte-slice-cast = "1.2.2"
uuid = "1.4.1"
parking_lot = "0.12.1"
smol_str = "0.2.0"
bitflags = "2.4.1"
bytes = "1.5.0"
rspirv-reflect = "0.8.0"
byteorder = "1.5.0"
glam = "0.25.0"
thiserror = "1.0.56"
