[package]
name = "dess-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dess-common = { path = "../common" }
dess-assets = { path = "../assets" }
dess-backend = { path = "../backend" }
bevy_tasks = { version = "0.12.1", features = ["multi-threaded"] }
ash = "0.37.3"
puffin = "0.17.0"
parking_lot = "0.12.1"
smol_str = "0.2.0"
