[package]
name = "dess-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dess-common = { path = "../common" }
dess-assets = { path = "../assets" }
dess-backend = { path = "../backend" }
bevy_tasks = { version = "0.12.1", features = ["multi-threaded"] }
puffin = "0.18.1"
parking_lot = "0.12.1"
smol_str = "0.2.0"
glam = "0.25.0"
siphasher = "1.0.0"
log = "0.4.20"
arrayvec = "0.7.4"
byte-slice-cast = "1.2.2"
memmap2 = "0.9.1"
bytes = "1.5.0"
