[package]
name = "dess-gfx"
version = "0.1.0"
edition = "2021"

[dependencies]
dess-backend = { path = "../backend" }
dess-common = { path = "../common" }
ash = "0.37.3"
puffin = "0.18.1"
bitflags = "2.4.1"
arrayvec = "0.7.4"
log = "0.4.20"
parking_lot = "0.12.1"
smol_str = "0.2.0"
thiserror = "1.0.56"
bevy_tasks = { version = "0.12.1", features = ["multi-threaded"] }
bytes = "1.5.0"
gpu-descriptor = "0.2.4"
gpu-descriptor-ash = "0.2.0"
