[package]
name = "dess-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puffin = "0.18.0"
simple_logger = "4.2.0"
dess-backend = { path = "../backend" }
dess-common = { path = "../common" }
dess-engine = { path = "../engine" }
bevy_tasks = { version = "0.12.1", features = ["multi-threaded"] }
winit = { version = "0.29.3", features = ["rwh_05"] }
raw-window-handle = "0.5.2"
log = "0.4.20"

[[example]]
name = "demo"

[dev-dependencies]
dess-assets = { path = "../assets" }
glam = "0.25.0"
puffin_http = "0.15.0"
parking_lot = "0.12.1"
rayon = "1.8.0"
